[gd_scene load_steps=5 format=3 uid="uid://cfy5hehp1o5s2"]

[ext_resource type="PackedScene" uid="uid://bnbfjh0vj0q0x" path="res://src/UI/Components/input.tscn" id="1_fccep"]
[ext_resource type="Script" path="res://src/UI/Styles/outline_item.gd" id="1_yjfpj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2o50"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5icy"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="OutlineItem" type="VBoxContainer"]
offset_right = 200.0
offset_bottom = 155.0
script = ExtResource("1_yjfpj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="RemoveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_f2o50")
theme_override_styles/focus = SubResource("StyleBoxFlat_u5icy")
text = "X"

[node name="XContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="XContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X"

[node name="XInput" parent="XContainer" instance=ExtResource("1_fccep")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="YContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="YContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y"

[node name="YInput" parent="YContainer" instance=ExtResource("1_fccep")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="SizeContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Size"

[node name="SizeInput" parent="SizeContainer" instance=ExtResource("1_fccep")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="ColorContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ColorContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="ColorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="changed" from="XContainer/XInput" to="." method="_on_x_input_changed"]
[connection signal="changed" from="YContainer/YInput" to="." method="_on_y_input_changed"]
[connection signal="changed" from="SizeContainer/SizeInput" to="." method="_on_size_input_changed"]
[connection signal="color_changed" from="ColorContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
